; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/video/geode/extr_lxfb_ops.c_lx_set_dotpll.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/video/geode/extr_lxfb_ops.c_lx_set_dotpll.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MSR_GLCP_DOTPLL = common dso_local global i32 0, align 4
@MSR_GLCP_DOTPLL_LOCK = common dso_local global i64 0, align 8
@MSR_GLCP_DOTPLL_BYPASS = common dso_local global i64 0, align 8
@MSR_GLCP_DOTPLL_HALFPIX = common dso_local global i64 0, align 8
@MSR_GLCP_DOTPLL_DOTRESET = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i64)* @lx_set_dotpll to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @lx_set_dotpll(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  store i64 %0, i64* %2, align 8
  %6 = load i32, i32* @MSR_GLCP_DOTPLL, align 4
  %7 = load i64, i64* %3, align 8
  %8 = load i64, i64* %4, align 8
  %9 = call i32 @rdmsr(i32 %6, i64 %7, i64 %8)
  %10 = load i64, i64* %3, align 8
  %11 = load i64, i64* @MSR_GLCP_DOTPLL_LOCK, align 8
  %12 = and i64 %10, %11
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %19

14:                                               ; preds = %1
  %15 = load i64, i64* %4, align 8
  %16 = load i64, i64* %2, align 8
  %17 = icmp eq i64 %15, %16
  br i1 %17, label %18, label %19

18:                                               ; preds = %14
  br label %61

19:                                               ; preds = %14, %1
  %20 = load i64, i64* %2, align 8
  store i64 %20, i64* %4, align 8
  %21 = load i64, i64* @MSR_GLCP_DOTPLL_BYPASS, align 8
  %22 = load i64, i64* @MSR_GLCP_DOTPLL_HALFPIX, align 8
  %23 = or i64 %21, %22
  %24 = xor i64 %23, -1
  %25 = load i64, i64* %3, align 8
  %26 = and i64 %25, %24
  store i64 %26, i64* %3, align 8
  %27 = load i64, i64* @MSR_GLCP_DOTPLL_DOTRESET, align 8
  %28 = load i64, i64* %3, align 8
  %29 = or i64 %28, %27
  store i64 %29, i64* %3, align 8
  %30 = load i32, i32* @MSR_GLCP_DOTPLL, align 4
  %31 = load i64, i64* %3, align 8
  %32 = load i64, i64* %4, align 8
  %33 = call i32 @wrmsr(i32 %30, i64 %31, i64 %32)
  %34 = call i32 @udelay(i32 100)
  store i32 0, i32* %5, align 4
  br label %35

35:                                               ; preds = %49, %19
  %36 = load i32, i32* %5, align 4
  %37 = icmp slt i32 %36, 1000
  br i1 %37, label %38, label %52

38:                                               ; preds = %35
  %39 = load i32, i32* @MSR_GLCP_DOTPLL, align 4
  %40 = load i64, i64* %3, align 8
  %41 = load i64, i64* %4, align 8
  %42 = call i32 @rdmsr(i32 %39, i64 %40, i64 %41)
  %43 = load i64, i64* %3, align 8
  %44 = load i64, i64* @MSR_GLCP_DOTPLL_LOCK, align 8
  %45 = and i64 %43, %44
  %46 = icmp ne i64 %45, 0
  br i1 %46, label %47, label %48

47:                                               ; preds = %38
  br label %52

48:                                               ; preds = %38
  br label %49

49:                                               ; preds = %48
  %50 = load i32, i32* %5, align 4
  %51 = add nsw i32 %50, 1
  store i32 %51, i32* %5, align 4
  br label %35

52:                                               ; preds = %47, %35
  %53 = load i64, i64* @MSR_GLCP_DOTPLL_DOTRESET, align 8
  %54 = xor i64 %53, -1
  %55 = load i64, i64* %3, align 8
  %56 = and i64 %55, %54
  store i64 %56, i64* %3, align 8
  %57 = load i32, i32* @MSR_GLCP_DOTPLL, align 4
  %58 = load i64, i64* %3, align 8
  %59 = load i64, i64* %4, align 8
  %60 = call i32 @wrmsr(i32 %57, i64 %58, i64 %59)
  br label %61

61:                                               ; preds = %52, %18
  ret void
}

declare dso_local i32 @rdmsr(i32, i64, i64) #1

declare dso_local i32 @wrmsr(i32, i64, i64) #1

declare dso_local i32 @udelay(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
